<resources>
    <string name="app_name">GoogleFitApp</string>
    <string name="set_goal">Set Goal</string>
    <string name="update_steps">update steps</string>
    <string name="step_placeholder">steps will be shown here</string>
    <string name="goal_dialog">Please set a new goal.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="goal_hint">Please enter a number >= 100.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_goal_warning">Invalid goal. Please try again.</string>
    <string name="newgoal">New goal set.</string>
    <string name="height_prompt">Please input your height:</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="ok">OK</string>
    <string name="height">height</string>
    <string name="start_stop">Start/Stop</string>
    <string name="set_new_goal">Set New Goal</string>
    <string name="steps_walked_text">TextView for displaying the number of steps walked for todat</string>
    <string name="mock_steps">Add 500 steps</string>
    <string name="set_time">Set time in milliseconds</string>
    <string name="go_back">Go back</string>
    <string name="weekly_snapshot">Weekly snapshot</string>
    <string name="autoGoal">Yes</string>
    <string name="notNow">Not now</string>
    <string name="cong">Congratulations!</string>
    <string name="cong_text_one">You have met your goal</string>
    <string name="cong_text_two">Would you like a new goal?</string>
    <string name="friend_list_title">Your Friends</string>
    <string name="enter_email">enter friend\'s email</string>
    <string name="add_friend">Add</string>
    <string name="friends">Friends</string>
    <string name="add_friend_title">Add A Friend</string>
    <string name="chat">Chat</string>
    <string name="viewfriendactivity">View Friend Activity</string>
    <string name="next7days">Next 7 Days</string>
    <string name="last7days">Last 7 Days</string>
</resources>