<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_prompt"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="100sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/userFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/feet"
            android:textSize="25sp"
            android:layout_marginLeft="120sp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/userInches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/inches"
            android:textSize="25sp"
            android:layout_marginLeft="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center" />

</LinearLayout>